Refactor/modify method of kaptcha
